selfhost/test/typechecker/bindingdecl/error_type_mismatch_val_destructured_tuple.out
Error at %FILE_NAME%:1:29
Type mismatch
  |  val (a, b): (Int, String) = "abcd"
                                 ^
Expected: (Int, String)
but instead found: String
